--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ android {
     buildToolsVersion "25.0.0"
     defaultConfig {
         applicationId "com.aarushi.sunshine"
+        vectorDrawables.useSupportLibrary = true
         minSdkVersion 16
         targetSdkVersion 25
         versionCode 1
